--- a/src/it/resources/log4j.properties
+++ b/src/it/resources/log4j.properties
@@ -1,8 +1,11 @@
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} [%-5p] %C{10}:%L - %m%n
 
 log4j.rootLogger=OFF, stdout
 log4j.logger.org.apache.spark=ERROR, stdout
 log4j.logger.org.apache=ERROR, stdout
+
+log4j.logger.io.nomad48=INFO, stdout
+log4j.additivity.io.nomad48=false
