Refactoring * simplify the code * log the runtime information as json * add example of transformation of the logged json (visualization to DOT language)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by Jayesh J.
 
+.bsp
 *.class
 *.log
 *.iml
@@ -26,3 +27,6 @@ target/
 .scala_dependencies
 .worksheet
 spark-warehouse
+
+
+private/*
