--- a/src/it/resources/log4j.properties
+++ b/src/it/resources/log4j.properties
@@ -7,5 +7,8 @@ log4j.rootLogger=OFF, stdout
 log4j.logger.org.apache.spark=ERROR, stdout
 log4j.logger.org.apache=ERROR, stdout
 
-log4j.logger.io.nomad48=INFO, stdout
+# Normally the appender (such as stdout) is specified in the properties file
+# log4j.logger.io.nomad48=INFO, stdout
+# During these tests, the appender is dynamically added
+log4j.logger.io.nomad48=INFO
 log4j.additivity.io.nomad48=false
